--- a/reLIFE.DataAccess/DataAccess.csproj
+++ b/reLIFE.DataAccess/DataAccess.csproj
@@ -11,9 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Repositories\SqlServer\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
