--- a/reLIFE.WinFormsUI/reLIFE.WinFormsUI.csproj
+++ b/reLIFE.WinFormsUI/reLIFE.WinFormsUI.csproj
@@ -8,6 +8,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+
   <ItemGroup>
     <ProjectReference Include="..\reLIFE.BusinessLogic\reLIFE.BusinessLogic.csproj" />
     <ProjectReference Include="..\reLIFE.Core\reLIFE.Core.csproj" />
@@ -19,6 +20,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assets\" />
   </ItemGroup>
 
   <ItemGroup>
